[package]
name = "pinyin"
version = "0.1.0"
authors = ["Jiajie Chen <noc@jiegec.ac.cn>"]
edition = "2018"

[dependencies]
structopt = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
flate2 = { version = "1.0", features = ["rust_backend"], default-features = false }
encoding_rs = "0.8"